[tool.poetry]
name = "project0924"
version = "0.1.0"
description = ""
authors = ["Евгений Серебряков <ENiSerebryakov@rosatom.ru>"]
readme = "README.md"

[tool.pytest.ini_options]
log_format = "[%(levelname)s] %(asctime)s.%(msecs)03d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
addopts = [
    "--log-cli-level=DEBUG",
]

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
known_first_party = ["core"]

[tool.autoflake]
in-place=true
ignore-init-module-imports=true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.poetry.dependencies]
python = "3.11.8"
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit-hooks = "^5.0.0"
pre-commit = "^4.0.1"
autoflake = "^2.3.1"
assertpy = "^1.1"
pytest-cov = "^5.0.0"
flask = "^3.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
